# Airline_Delay_Analysis

./: EDA.ipynb  README.md  app.py  condensed_data.ipynb  data_analysis.ipynb  data_cleaning.ipynb  delay_types_vis.py  delay_types_vis_alt.py  delays_reduced.csv  pyproject.toml
.devcontainer/: devcontainer.json
csv/: delays_reduced.csv  delays_updated.csv
data/: delaydata_final.csv
jordan_files/: app.py  charts.py  data.py  filters.py  layouts.py
julia_files/: app.py  update_data.ipynb
nessa_files/: EDA.ipynb  app.py  condensed_data.ipynb  delay_types_vis.py
src/: reducing_data.ipynb
