[tool.poetry]
name = "eda"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
ipykernel = "^7.1.0"
pandas = "^3.0.0"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
plotly = "^6.5.2"
scipy = "^1.17.0"
scipy-stubs = "~=1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
